@@ -4,13 +4,13 @@
     <option name="autoReloadType" value="SELECTIVE" />
   </component>
   <component name="ChangeListManager">
-    <list default="true" id="818c21f8-457c-4611-98eb-e731b611449b" name="Changes" comment="Empresa.busca() handles ArrayIndexOutOfBoundsException">
+    <list default="true" id="818c21f8-457c-4611-98eb-e731b611449b" name="Changes" comment="Translated back to English">
       <change beforePath="$PROJECT_DIR$/.idea/workspace.xml" beforeDir="false" afterPath="$PROJECT_DIR$/.idea/workspace.xml" afterDir="false" />
       <change beforePath="$PROJECT_DIR$/src/Changes.txt" beforeDir="false" afterPath="$PROJECT_DIR$/src/Changes.txt" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/Empresa.java" beforeDir="false" afterPath="$PROJECT_DIR$/src/Empresa.java" afterDir="false" />
+      <change beforePath="$PROJECT_DIR$/src/Empresa.java" beforeDir="false" afterPath="$PROJECT_DIR$/src/Company.java" afterDir="false" />
+      <change beforePath="$PROJECT_DIR$/src/Funcionario.java" beforeDir="false" afterPath="$PROJECT_DIR$/src/Employee.java" afterDir="false" />
       <change beforePath="$PROJECT_DIR$/src/Main.java" beforeDir="false" afterPath="$PROJECT_DIR$/src/Main.java" afterDir="false" />
       <change beforePath="$PROJECT_DIR$/src/Revisao.txt" beforeDir="false" afterPath="$PROJECT_DIR$/src/Revisao.txt" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/lista_funcionarios.txt" beforeDir="false" afterPath="$PROJECT_DIR$/src/lista_funcionarios.txt" afterDir="false" />
     </list>
     <option name="SHOW_DIALOG" value="false" />
     <option name="HIGHLIGHT_CONFLICTS" value="true" />
@@ -43,6 +43,9 @@
   <component name="MarkdownSettingsMigration">
     <option name="stateVersion" value="1" />
   </component>
+  <component name="ProblemsViewState">
+    <option name="selectedTabId" value="CurrentFile" />
+  </component>
   <component name="ProjectId" id="2LYZKZLPTNs3TJsrHuXFOkkNuLW" />
   <component name="ProjectLevelVcsManager" settingsEditedManually="true" />
   <component name="ProjectViewState">
@@ -64,8 +67,8 @@
     </key>
   </component>
   <component name="RunManager" selected="Application.Main">
-    <configuration name="Funcionario" type="Application" factoryName="Application" temporary="true" nameIsGenerated="true">
-      <option name="MAIN_CLASS_NAME" value="Funcionario" />
+    <configuration name="Employee" type="Application" factoryName="Application" temporary="true" nameIsGenerated="true">
+      <option name="MAIN_CLASS_NAME" value="Employee" />
       <module name="AED3_project" />
       <method v="2">
         <option name="Make" enabled="true" />
@@ -88,7 +91,7 @@
     <recent_temporary>
       <list>
         <item itemvalue="Application.Main" />
-        <item itemvalue="Application.Funcionario" />
+        <item itemvalue="Application.Employee" />
         <item itemvalue="Application.List" />
       </list>
     </recent_temporary>
@@ -221,7 +224,14 @@
       <option name="project" value="LOCAL" />
       <updated>1677030004251</updated>
     </task>
-    <option name="localTasksCounter" value="18" />
+    <task id="LOCAL-00018" summary="Assignment finished">
+      <created>1677086415496</created>
+      <option name="number" value="00018" />
+      <option name="presentableId" value="LOCAL-00018" />
+      <option name="project" value="LOCAL" />
+      <updated>1677086415496</updated>
+    </task>
+    <option name="localTasksCounter" value="19" />
     <servers />
   </component>
   <component name="Vcs.Log.Tabs.Properties">
@@ -253,7 +263,9 @@
     <MESSAGE value="Included lista_funcionarios.txt" />
     <MESSAGE value="added numerous tasks to the backlog" />
     <MESSAGE value="Empresa.busca() handles ArrayIndexOutOfBoundsException" />
-    <option name="LAST_COMMIT_MESSAGE" value="Empresa.busca() handles ArrayIndexOutOfBoundsException" />
+    <MESSAGE value="Assignment finished" />
+    <MESSAGE value="Translated back to English" />
+    <option name="LAST_COMMIT_MESSAGE" value="Translated back to English" />
   </component>
   <component name="XDebuggerManager">
     <breakpoint-manager>
