@@ -1,34 +1,0 @@
-public class Funcionario {
-    private String nome;
-    private double salario;
-
-    // get set
-    public String getNome() {
-        return nome;
-    }
-
-    public void setNome(String nome) {
-        this.nome = nome;
-    }
-
-    public double getSalario() {
-        return salario;
-    }
-
-    public void setSalario(double salario) {
-        this.salario = salario;
-    }
-
-    // construtor
-    public Funcionario(String nome, double salario) {
-        this.nome = nome;
-        this.salario = salario;
-    }
-
-    // metodos
-    public String toString() {
-        return String.format("""
-                (Nome: %s, Salario: %.2f)""",
-                nome, salario);
-    }
-}
