@@ -1,4 +1,4 @@
-Funcionario:
+Employee:
     Fixed warnings, except about the never used methods;
     Limited the iteration loop in the contem method to the length of the array;
     Just made a research and found helpful info about exception handling,
@@ -17,6 +17,10 @@ I can't create one of its instaces without an employee. I don't get the point of
     Include a .txt file with names and salaries;
 
     added numerous tasks to the backlog;
-    Empresa.busca() handles ArrayIndexOutOfBoundsException;
+    Company.busca() handles ArrayIndexOutOfBoundsException;
 
     ! The first assignment of the year is finished !
+
+    Now we were asked to review the use of stacks and queues.
+
+    Translated back to English;
